maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:43: error: not found: value void
          void setDirection(Direction.EST)
          ^JediEscaper:47: error: not found: value void
          void setDirection(Direction.OUEST)
          ^JediEscaper:51: error: not found: value void
          void setDirection(Direction.NORTH)
          ^JediEscaper:55: error: not found: value void
          void setDirection(Direction.SOUTH)
          ^